inadvertantly broken css with fix, reverted change but kept solution from github community

--- a/Stylesheets/layout.css
+++ b/Stylesheets/layout.css
@@ -45,7 +45,6 @@
 #footer{
     height: 200px;
     width: 100%;
-    min-width: 1000px;
     /*background-color: blanchedalmond;*/
     float:left;
 }
